Fixed "have a query" issue on small screens css.css
git-svn-id: https://plugins.svn.wordpress.org/slick-popup/trunk@1072301 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css.css
+++ b/css.css
@@ -157,18 +157,18 @@ div#curtain {
 ***************************************/
 .side-enquiry-holder {
 	background: url("images/black-texture.png") repeat scroll 0 0 #333; 
-  background: #074C97;
-  bottom: 25%;
-  height: 200px;
-  position: fixed;
-  right: 0;
-  width: 30px;
-  border-radius: 15px 0 0 15px;
-  padding: 3px;
-  float: right;
-  padding: 0 3px 5px;
-  border-radius: 10px 0 0 10px;
-  margin-top: 5px;
+	background: #074C97;
+	bottom: 25%;
+	height: 200px;
+	position: fixed;
+	right: 0;
+	width: 30px;
+	border-radius: 15px 0 0 15px;
+	padding: 3px;
+	padding: 0 3px 5px;
+	border-radius: 10px 0 0 10px;
+	margin-top: 5px;
+	z-index: 999; 
 }
 .side-enquiry-holder.holder-get-a-quote {
 	height: 154px; 
@@ -236,19 +236,24 @@ ul.omaksociallinks {
 
 @media (max-width: 767px) {
 	.side-enquiry-holder {
-		border-radius: 10px 0 0;
-		bottom: 0;
-		height: 20px;
-		width: 125px;
+	  border-radius: 10px 10px 0 0;
+	  bottom: 0;
+	  height: 20px;
+	  text-align: center;
+	  width: 125px;
+	  left: calc(50% - 65px);
+	  right: auto; 
 	}
 	.side-enquiry {
 		background: none;
 		color: #efefef;
 		margin: 0;
-		padding: 3px;
-		right: 5px;
+		padding: 0px;
+		right: auto;
 		text-indent: 0;
-		 width: 112px;
+		width: 112px;
+		position: relative;
+		top: 4px;
 	}
 	
 	.side-enquiry.have-a-query, .side-enquiry.get-a-quote {
